--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "electron-compile": "^6.4.2",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^1.3.0",
+    "express": "^4.16.3",
     "simple-peer": "^9.0.0",
     "socket.io-client": "^2.0.4"
   },
