--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint src --color"
+    "lint": "eslint src --color",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "monnier",
@@ -52,9 +53,11 @@
     "electron-store": "^1.3.0",
     "express": "^4.16.3",
     "simple-peer": "^9.0.0",
-    "socket.io-client": "^2.0.4"
+    "ws": "^5.1.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
@@ -64,6 +67,7 @@
     "eslint-config-airbnb": "^15",
     "eslint-plugin-import": "^2",
     "eslint-plugin-jsx-a11y": "^5",
-    "eslint-plugin-react": "^7"
+    "eslint-plugin-react": "^7",
+    "webpack": "^4.3.0"
   }
 }
