--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     }
   },
   "dependencies": {
+    "aframe": "^0.8.1",
+    "ar.js": "^1.4.10",
     "electron-compile": "^6.4.2",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^1.3.0",
@@ -68,6 +70,7 @@
     "eslint-plugin-import": "^2",
     "eslint-plugin-jsx-a11y": "^5",
     "eslint-plugin-react": "^7",
-    "webpack": "^4.3.0"
+    "webpack": "^4.3.0",
+    "webpack-cli": "^2.0.13"
   }
 }
