--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "aframe": "^0.8.1",
     "ar.js": "^1.4.10",
+    "ejs": "^2.5.8",
     "electron-compile": "^6.4.2",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^1.3.0",
