--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint src --color",
-    "build": "webpack"
+    "build": "webpack",
+    "ssl": "node bin/ssl"
   },
   "keywords": [],
   "author": "monnier",
@@ -71,6 +72,7 @@
     "eslint-plugin-import": "^2",
     "eslint-plugin-jsx-a11y": "^5",
     "eslint-plugin-react": "^7",
+    "node-forge": "^0.7.5",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13"
   }
