--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "electron-compile": "^6.4.2",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^1.3.0",
-    "simple-peer": "^9.0.0"
+    "simple-peer": "^9.0.0",
+    "socket.io-client": "^2.1.0"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
